--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ngrx/store": "^14.0.0-rc.0",
     "@ngrx/store-devtools": "^14.0.0-rc.0",
     "rxjs": "~7.5.0",
+    "todomvc-app-css": "^2.4.2",
+    "todomvc-common": "^1.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
